# paraforge

./: .gitignore  Cargo.toml  Makefile  README.md  dummy-model.pf.py  python.py  rust-toolchain.toml  setup.py  test-all.sh  test-scratch.py  test.py
examples/: composite_tests.py  feature_tests.py  first_model.pf.py  first_model.py  lego_castle.py
javascript/: CastleModules.js  README.md  castle.html  castle.js  demo.html  demo.js  first_model_variant.py  helpers.js  micropython-js.html  micropython-reduced.js  micropython.wasm  package-lock.json  package.json  panelui.js  paraforge-worker.js  paraforge.js  three.Den.js  three.Densaugeo.js  ui-panels.js  viewer.js  worker.js
javascript/icons/: build-svg-icons.py  notes.md
macros/: Cargo.toml
macros/src/: macros.rs
paraforge/: __init__.py  __main__.py
rust/: Cargo.toml
rust/macros/src/: macros.rs
rust/src/: lib.rs
src/: lib.rs
test/: first_model-pretty.gltf  first_model.glb  first_model.gltf  first_model.pf.py  test_demo.py
test-files/: first_model-pretty.gltf  first_model.glb  first_model.gltf  first_model.pf.py  package.json
test-files/browser/: fullscreen.css  known-output.html  local-fullscreen.html  npm-fullscreen.html  unpkg-fullscreen.html
