[package]
name = "paraforge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# Compiler optimizations recommended by https://betterprogramming.pub/how-to-
# pass-arrays-between-javascript-and-wasm-in-rust-9f2eeee7f2b6 . Reduced compile
# size for hello world from 1.5 MB to 94.4 kB
[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = "fat"

[profile.dev]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = "fat"

[dependencies]
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
serde_tuple = "0.5.0"
serde_repr = "0.1.17"
gltf-json = { version = "1.4.1", features = ["names"] }
base64 = "0.21.5"
nalgebra = "0.32.4"
paraforge-macros = { path = "macros" }
